Couleur btn-home

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 .btn-home {
-  background-color: yellow;
+  background-color:gold;
   color: black;
   padding: 10px 20px;
   border: none;
