--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,11 @@
 <ul class="nav">
   <li class="nav-item">
-    <%= link_to "Accueil", root_path, class:"nav-link active" %>
+    <%= link_to "Accueil", root_path, class:"nav-link text-dark #{'active' if current_page?(root_path)}" %>
   </li>
   <li class="nav-item">
-    <%= link_to "Propriétés", proprietes_path, class:"nav-link text-dark"  %>
+    <%= link_to "Propriétés", proprietes_path, class:"nav-link text-dark #{'active' if current_page?(proprietes_path)}"  %>
   <li class="nav-item">
-    <%= link_to"Mes réservations", reservations_path, class:"nav-link text-dark" %>
+    <%= link_to"Mes réservations", reservations_path, class:"nav-link text-dark #{'active' if current_page?(reservations_path)}" %>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled">Disabled</a>
