--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,13 +1,16 @@
-<div class="container">
-  <div class="row">
-    <div class="row">
+<div class="container mt-3">
+  <div class="row d-flex justify-content-center">
+    <div class="col-sm-8 col-md-6 col-lg-6 mx-auto">
       <% if current_user&.admin? %>
         <% @reservations.each do |r| %>
-          <%= r.user.nom_complet %>
-          <%= r.user.email %>
-          <%= r.propriete.nom %>
-          <%= r.date_debut %>
-          <%= r.date_fin %>
+        <div class="card">
+          <div class="card-body">
+            <p><strong>Réservation faite par <%= r.user.nom_complet %></strong></p>
+            <p>Mail : <%= r.user.email %></p>
+            <p>Propriété : <%= r.propriete.nom %></p>
+            <p>Du  <%= r.date_debut.strftime("%d/%m/%Y") %> au  <%= r.date_fin.strftime("%d/%m/%Y") %></p>
+          </div>
+        </div>
         <% end %>
       <% end %>
 
