--- a/app/views/proprietes/show.html.erb
+++ b/app/views/proprietes/show.html.erb
@@ -2,10 +2,10 @@
   <div class="row d-flex justify-content-center">
     <div class="col-sm-10 col-md-8 col-lg-8 mx-auto">
       <div class="card-trip">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <%= image_tag "Hendaye.jpg"%>
         <div class="card-trip-infos">
           <div>
-            <h2> <%= @propriete.nom %></h2>
+            <h2> <% @propriete.nom %></h2>
             <p><%= @propriete.adresse %></p>
           </div>
           <button data-action="click->toggle#fire" class="btn btn-outline-primary"> Reserver</button>
