--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,5 +2,13 @@
   background-size: cover;
   background-position: center;
   padding: 100px 0;
-  height:100vh;
+  min-height:100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 576px) {
+  .background-image {
+    background-size: contain;
+  }
 }
