Action update et destroy de reservation + pundit

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -9,6 +9,12 @@
             <p>Mail : <%= r.user.email %></p>
             <p>Propriété : <%= r.propriete.nom %></p>
             <p>Du  <%= r.date_debut.strftime("%d/%m/%Y") %> au  <%= r.date_fin.strftime("%d/%m/%Y") %></p>
+            <%= link_to propriete_reservation_path(r.propriete, r), data: { turbo_method: :delete, turbo_confirm: "Es-tu sûr ?" } do %>
+              <i class="fa-solid fa-trash text-dark me-3"></i>
+            <% end %>
+            <%= link_to edit_propriete_reservation_path(r.propriete, r) do %>
+              <i class="fa-solid fa-pen-to-square text-dark"></i>
+            <% end %>
           </div>
         </div>
         <% end %>
