--- a/app/views/proprietes/show.html.erb
+++ b/app/views/proprietes/show.html.erb
@@ -2,7 +2,13 @@
   <div class="row d-flex justify-content-center">
     <div class="col-sm-10 col-md-8 col-lg-8 mx-auto">
       <div class="card-trip">
-        <%= image_tag "Hendaye.jpg"%>
+       <% if @propriete.nom == "Hendaye, appartement du haut" %>
+        <%= image_tag "Hendaye.jpg", class: "img-fluid full-width-img" %>
+      <% elsif @propriete.nom == "Hendaye, appartement du bas" %>
+        <%= image_tag "1200x680_grande_plage_hendaye2.jpg", class: "img-fluid full-width-img" %>
+      <% else %>
+        <%= image_tag "Préchac_(Hautes-Pyrénées)_1.jpg", class: "img-fluid full-width-img" %>
+      <% end %>
         <div class="card-trip-infos">
           <div>
             <h2> <% @propriete.nom %></h2>
