--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
   <li class="nav-item">
     <%= link_to"Mes réservations", reservations_path, class:"nav-link text-dark #{'active' if current_page?(reservations_path)}" %>
   </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">Disabled</a>
+  <li>
+    <li><%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link text-dark" %>
   </li>
 </ul>
