--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,43 +1,55 @@
 <div class="container mt-3">
   <div class="row d-flex justify-content-center">
     <div class="col-sm-8 col-md-6 col-lg-6 mx-auto">
-      <% @reservations.each do |r| %>
-        <div class="card mb-3">
-          <div class="card-body">
-            <p><strong>Réservation faite par <%= r.user.nom_complet %></strong></p>
-            <p>Mail : <%= r.user.email %></p>
-            <p>Propriété : <%= r.propriete.nom %></p>
-            <p>Du  <%= r.date_debut.strftime("%d/%m/%Y") %> au  <%= r.date_fin.strftime("%d/%m/%Y") %></p>
-            <p>Statut de la réservation: <%= r.statut %></p>
-            <% if current_user.admin? %>  <!-- Affiche cette option uniquement pour les administrateurs -->
-              <%= simple_form_for r, url: update_statut_reservation_path(r), method: :patch,
-                html: {
-                     data: {
-                              controller: "alert",
-                              alert_icon_value: "warning",
-                              alert_type_value: "Es-tu sûr ?",
-                              alert_title_value: "Modifier le statut de la réservation",
-                              alert_html_value: "Tu t'apprêtes à modifier le statut de cette réservation.",
-                              alert_confirm_button_text_value: "Oui, mettre à jour",
-                              alert_cancel_button_text_value: "Annuler",
-                              alert_show_cancel_button_value: true,
-                              action: "submit->alert#initSweetalert",
-                              turbo: false
-                            }
-                } do |f| %>
-                <%= f.input :statut, collection: Reservation.statuts.keys.map { |statut| [statut.humanize, statut] }, label: "Modifier le statut" %>
-                <%= f.submit 'Mettre à jour', class: 'btn btn-success' %>
+      <% if @reservations.any? %>
+        <% @reservations.each do |r| %>
+          <div class="card mb-3">
+            <div class="card-body">
+              <p><strong>Réservation faite par <%= r.user.nom_complet %></strong></p>
+              <p>Mail : <%= r.user.email %></p>
+              <p>Propriété : <%= r.propriete.nom %></p>
+              <p>Du  <%= r.date_debut.strftime("%d/%m/%Y") %> au  <%= r.date_fin.strftime("%d/%m/%Y") %></p>
+              <p>Statut de la réservation: <%= r.statut %></p>
+              <% if current_user.admin? %>  <!-- Affiche cette option uniquement pour les administrateurs -->
+                <%= simple_form_for r, url: update_statut_reservation_path(r), method: :patch,
+                  html: {
+                      data: {
+                                controller: "alert",
+                                alert_icon_value: "warning",
+                                alert_type_value: "Es-tu sûr ?",
+                                alert_title_value: "Modifier le statut de la réservation",
+                                alert_html_value: "Tu t'apprêtes à modifier le statut de cette réservation.",
+                                alert_confirm_button_text_value: "Oui, mettre à jour",
+                                alert_cancel_button_text_value: "Annuler",
+                                alert_show_cancel_button_value: true,
+                                action: "submit->alert#initSweetalert",
+                                turbo: false
+                              }
+                  } do |f| %>
+                  <%= f.input :statut, collection: Reservation.statuts.keys.map { |statut| [statut.humanize, statut] }, label: "Modifier le statut" %>
+                  <%= f.submit 'Mettre à jour', class: 'btn btn-success' %>
+                <% end %>
               <% end %>
-            <% end %>
 
-
-              <%= link_to propriete_reservation_path(r.propriete, r), data: { turbo_method: :delete, turbo_confirm: "Es-tu sûr ?" } do %>
-                <i class="fa-solid fa-trash text-dark me-3"></i>
-              <% end %>
-              <%= link_to edit_propriete_reservation_path(r.propriete, r) do %>
-                <i class="fa-solid fa-pen-to-square text-dark"></i>
-              <% end %>
+              <div>
+                  <%= link_to propriete_reservation_path(r.propriete, r), data: { turbo_method: :delete, turbo_confirm: "Es-tu sûr ?" } do %>
+                    <i class="fa-solid fa-trash text-dark me-3"></i>
+                  <% end %>
+              </div>
+              <div>
+                <%= link_to edit_propriete_reservation_path(r.propriete, r) do %>
+                  <i class="fa-solid fa-pen-to-square text-dark"></i>
+                <% end %>
+              </div>
+            </div>
           </div>
+        <% end %>
+      <% else %>
+        <div class="d-flex justify-content-center mt-5">
+          <i class="fa-solid fa-calendar-xmark fa-5x text-info"></i>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+          <strong>Vous n'avez aucune réservation pour le moment. </strong>
         </div>
       <% end %>
     </div>
