--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -5,7 +5,22 @@
         <% @reservations.each do |r| %>
           <div class="card mb-3">
             <div class="card-body">
-              <p><strong>Réservation faite par <%= r.user.nom_complet %></strong></p>
+              <div class="d-flex justify-content-between">
+                <div><strong>Réservation faite par <%= r.user.nom_complet %></strong></div>
+                <div class="edit-destroy d-flex justify-content-end">
+                  <div>
+                    <%= link_to propriete_reservation_path(r.propriete, r), data: { turbo_method: :delete, turbo_confirm: "Es-tu sûr ?" } do %>
+                      <i class="fa-solid fa-trash text-dark me-3"></i>
+                    <% end %>
+                  </div>
+                  <div>
+                  <%= link_to edit_propriete_reservation_path(r.propriete, r) do %>
+                    <i class="fa-solid fa-pen-to-square text-dark"></i>
+                  <% end %>
+                  </div>
+                </div>
+              </div>
+
               <p>Mail : <%= r.user.email %></p>
               <p>Propriété : <%= r.propriete.nom %></p>
               <p>Du  <%= r.date_debut.strftime("%d/%m/%Y") %> au  <%= r.date_fin.strftime("%d/%m/%Y") %></p>
@@ -31,16 +46,7 @@
                 <% end %>
               <% end %>
 
-              <div>
-                  <%= link_to propriete_reservation_path(r.propriete, r), data: { turbo_method: :delete, turbo_confirm: "Es-tu sûr ?" } do %>
-                    <i class="fa-solid fa-trash text-dark me-3"></i>
-                  <% end %>
-              </div>
-              <div>
-                <%= link_to edit_propriete_reservation_path(r.propriete, r) do %>
-                  <i class="fa-solid fa-pen-to-square text-dark"></i>
-                <% end %>
-              </div>
+
             </div>
           </div>
         <% end %>
