--- a/app/views/reservation_mailer/reservation_confirmation_update.html.erb
+++ b/app/views/reservation_mailer/reservation_confirmation_update.html.erb
@@ -1,7 +1,10 @@
-<p>Bonjour <%= @user.email %>,</p>
+<p>Bonjour <%= @user.email %> !</p>
 
 <p>Le statut de votre demande de réservation pour la propriété "<%= @propriete.nom %>" a été mis à jour.</p>
 
 <p><strong>Nouveau statut :</strong> <%= @reservation.statut %></p>
+
+
+******************************************************************************
 
 <p>Merci d’utiliser Family Loc !</p>
