--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,8 +1,17 @@
-<h1>Bonjour <%= @user.email %>! </h1>
+<<h1>Bonjour <%= @user.email %> !</h1>
 
-<p>
-  Bienvenue sur notre site de réservation de propriétés! Nous sommes ravis de vous accueillir parmi nous.
-  Vous pouvez dès à présent explorer nos propriétés et effectuer des réservations en ligne.
-  Si vous avez des questions ou besoin d'aide, n'hésitez pas à nous contacter.
-  Nous sommes là pour vous aider!
-</p>
+<p>Bienvenue sur Family Loc !</p>
+
+<p>Vous pouvez dès à présent effectuer des demandes de réservation en ligne.</p>
+
+<p>Lorsqu'une demande est effectuée, vous recevrez un premier e-mail confirmant les dates choisies.</p>
+<p>Un second e-mail vous sera envoyé une fois la réservation confirmée.</p>
+
+<p>Nous vous souhaitons une agréable expérience sur notre site.</p>
+<p>Si vous avez des questions, n'hésitez pas à nous contacter.</p>
+<p>À bientôt !</p>
+
+
+******************************************************************************
+
+<p>Merci d’utiliser Family Loc !</p>
