--- a/app/views/reservation_mailer/notif_admin.html.erb
+++ b/app/views/reservation_mailer/notif_admin.html.erb
@@ -1,4 +1,4 @@
-<p>Une demande de reservation a été faite par
-<%= @reservation.user %>
-pour la <%= @reservation.propriete %>
-</p>
+<p>Une demande de reservation a été faite par :
+<p><%= @reservation.user.email %></p>
+<p>pour: <%= @reservation.propriete.nom %></p>
+<p>du <%= @reservation.date_debut %> au <%=@reservation.date_fin%> </p>
