--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -4,8 +4,8 @@
       <div class="form" data-controller="datepicker"
         data-datepicker-booked-dates-value = "<%= propriete.reservations.pluck(:date_debut, :date_fin).flatten.map { |d| d.to_date.to_s }.to_json %>">
         <%= simple_form_for [@propriete, @reservation] do |f| %>
-        <%= f.input :date_debut, as: :string, input_html: { data: { controller: "datepicker" } } %>
-        <%= f.input :date_fin, as: :string, input_html: { data: { controller: "datepicker" } } %>
+        <%= f.input :date_debut.strftime("%d/%m/%Y"), as: :string, input_html: { data: { controller: "datepicker" } } %>
+        <%= f.input :date_fin.strftime("%d/%m/%Y"), as: :string, input_html: { data: { controller: "datepicker" } } %>
         <%= f.button :submit, label:"Reserver" %>
         <% end %>
       </div>
