--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,11 @@
     <%= link_to"Mes réservations", reservations_path, class:"nav-link text-dark #{'active' if current_page?(reservations_path)}" %>
   </li>
   <li>
-    <li><%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link text-dark" %>
+    <li>
+      <% if user_signed_in?%>
+        <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link text-dark" %>
+      <% else %>
+        <%= link_to "Se connecter", new_user_session_path, class: "nav-link text-dark" %>
+      <% end %>
   </li>
 </ul>
