--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -18,7 +18,7 @@
           data: { controller: "datepicker" }
         } %>
 
-        <%= f.submit "Réserver" %>
+        <%= f.submit "Demande de réservation" %>
 
         <% end %>
       </div>
