--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,9 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+//  * {
+//   background-color : #BA9FD9;
+//  }
+//  body {
+//   background-color : #BA9FD9;
+//  }
