--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,3 +10,10 @@
   transition: background-color 0.3s ease;
   text-decoration: none;
 }
+ h1 {
+  font-family: "Ribeye", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #f5f5f5;
+  font-size: 80px;
+ }
