--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
 
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= asset_path 'family.jpg' %>')">
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= asset_path 'champ.avif' %>')">
     <div class="text-center">
-      <h1 class="text-white">Bienvenue sur notre site de réservation</h1>
-    <%= link_to "Faire une réservation", proprietes_path, class:"btn-home" %>
+      <%# <h1 class="text-white">Bienvenue sur notre site de réservation</h1> %>
+      <h1>Family Loc</h1>
+      <div class="mt-5"><%= link_to "Faire une réservation", proprietes_path, class:"btn-home" %></div>
+
     </div>
 
 </div>
