--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -2,8 +2,20 @@
   <div class="row">
     <div class="col-sm-8 col-md-6 col-lg-6 mx-auto">
       <div class="form" data-controller="datepicker"
+      
         data-datepicker-booked-dates-value = "<%= propriete.reservations.pluck(:date_debut, :date_fin).flatten.map { |d| d.to_date.to_s }.to_json %>">
         <%= simple_form_for [@propriete, @reservation] do |f| %>
+
+        <% if @reservation.errors.any? %>
+          <div class="alert alert-danger">
+            <h5>Des erreurs ont empêché la soumission du formulaire :</h5>
+            <ul>
+              <% @reservation.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
         <%= f.input :date_debut, as: :string,
         label: "Date de début",
         input_html: {
