--- a/app/views/proprietes/index.html.erb
+++ b/app/views/proprietes/index.html.erb
@@ -1,3 +1,8 @@
+
+<div class="back-ground", style="background-image:  linear-gradient( 89.2deg,  rgba(255,255,255,1) -1.3%, rgba(253,109,38,1) 281.6% );">
+
+
+
 <div class="container mt-5">
   <div class="row d-flex justify-content-center">
     <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
@@ -20,4 +25,5 @@
       <% end %>
     </div>
   </div>
+</div>
 </div>
