--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,9 +5,13 @@
   <li class="nav-item">
     <%= link_to "Propriétés", proprietes_path, class:"nav-link text-dark #{'active' if current_page?(proprietes_path)}"  %>
   <li class="nav-item">
-    <%= link_to"Mes réservations", reservations_path, class:"nav-link text-dark #{'active' if current_page?(reservations_path)}" %>
+    <%= link_to"Réservations", reservations_path, class:"nav-link text-dark #{'active' if current_page?(reservations_path)}" %>
   </li>
-  <li>
+  <% if current_user.admin?%>
+    <li class="nav-item">
+      <%= link_to "Tableau de bord",admin_reservations_path, class:"nav-link text-dark #{'active' if current_page?(admin_reservations_path)}" %>
+    <li>
+  <% end %>
     <li>
       <% if user_signed_in?%>
         <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link text-dark" %>
