--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,10 @@
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
         <div class="form-inputs mt-3">
+          <%= f.input :nom_complet,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "nom & prénom" } %>
           <%= f.input :email,
                       required: true,
                       autofocus: true,
@@ -17,11 +21,11 @@
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
         </div>
-        <div class="form-actions">
+        <div class="form-actions mb-4">
           <%= f.button :submit, "Créer un compte" %>
         </div>
         <% end %>
-        <%= render "devise/shared/links" %>
+        <p> Déjà identifié ? <%= render "devise/shared/links" %></p>
     </div>
   </div>
 </div>
