--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,7 @@
           <%= f.input :nom_complet,
                       required: true,
                       autofocus: true,
+                      label: "Nom & prénom",
                       input_html: { autocomplete: "nom & prénom" } %>
           <%= f.input :email,
                       required: true,
@@ -21,7 +22,7 @@
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
         </div>
-        <div class="form-actions mb-4">
+        <div class="form-actions mb-4 btn btn-primary">
           <%= f.button :submit, "Créer un compte" %>
         </div>
         <% end %>
