Ajout d'un job + gestion messages d'alerte

--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,14 +1,14 @@
-<% if notice %>
-  <div class="alert alert-info alert-dismissible fade show m-1" role="alert">
-    <%= notice %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
+<% flash.each do |type, message| %>
+  <% bootstrap_class = case type.to_sym
+     when :notice then "alert-success"
+     when :alert then "alert-danger"
+     else "alert-info"
+  end %>
+
+  <div class="alert <%= bootstrap_class %> alert-dismissible fade show m-1" role="alert">
+    <%= message %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
-<% if alert %>
-  <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
-    <%= alert %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </button>
-  </div>
-<% end %>
+
+
