--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= asset_path 'champ.avif' %>')">
 <div class="container mt-3">
   <div class="row d-flex justify-content-center">
     <div class="col-sm-12 col-md-8 col-lg-6">
@@ -22,11 +23,12 @@
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
         </div>
-        <div class="form-actions mb-4 btn btn-primary">
-          <%= f.button :submit, "Créer un compte" %>
+        <div class="form-actions mb-4">
+          <%= f.button :submit, "Créer un compte", class:"btn-home" %>
         </div>
         <% end %>
         <p> Déjà identifié ? <%= render "devise/shared/links" %></p>
     </div>
   </div>
+</div>
 </div>
