--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,24 +1,25 @@
 <ul class="nav">
-  <li class="nav-item">
-    <%= link_to "Accueil", root_path, class:"nav-link text-dark #{'active' if current_page?(root_path)}" %>
-  </li>
-  <li class="nav-item">
-    <%= link_to "Propriétés", proprietes_path, class:"nav-link text-dark #{'active' if current_page?(proprietes_path)}"  %>
-  </li>
-  <li class="nav-item">
-    <%= link_to"Réservations", reservations_path, class:"nav-link text-dark #{'active' if current_page?(reservations_path)}" %>
-  </li>
-  <%  if user_signed_in? && current_user.admin?%>
+  <% if user_signed_in? %>
     <li class="nav-item">
-      <%= link_to "Tableau de bord",admin_reservations_path, class:"nav-link text-dark #{'active' if current_page?(admin_reservations_path)}" %>
+      <%= link_to "Propriétés", proprietes_path, class: "nav-link text-dark #{'active' if current_page?(proprietes_path)}" %>
+    </li>
+    <li class="nav-item">
+      <%= link_to "Réservations", reservations_path, class: "nav-link text-dark #{'active' if current_page?(reservations_path)}" %>
+    </li>
+
+    <% if current_user.admin? %>
+      <li class="nav-item">
+        <%= link_to "Tableau de bord", admin_reservations_path, class: "nav-link text-dark #{'active' if current_page?(admin_reservations_path)}" %>
+      </li>
+    <% end %>
+
+    <li class="nav-item ms-auto">
+      <%= link_to "Déconnexion", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link text-dark" %>
+    </li>
+  <% else %>
+    <li class="nav-item ms-auto">
+      <%= link_to "Connexion", new_user_session_path, class: "nav-link text-dark" %>
     </li>
   <% end %>
-  <li class="nav-item">
-    <% if user_signed_in?%>
-      <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link text-dark" %>
-    <% else %>
-      <%= link_to "Se connecter", new_user_session_path, class: "nav-link text-dark" %>
-    <% end %>
-  </li>
-
+</div>
 </ul>
