--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('<%= asset_path 'champ.avif' %>')">
-<div class="container mt-3">
+<div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-sm-12 col-md-8 col-lg-6">
-      <h2>Créer un compte</h2>
+      <h2 class="text-white">Créer un compte</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
         <div class="form-inputs mt-3">
@@ -27,7 +27,7 @@
           <%= f.button :submit, "Créer un compte", class:"btn-home" %>
         </div>
         <% end %>
-        <p> Déjà identifié ? <%= render "devise/shared/links" %></p>
+        <p class="text-white"> Déjà identifié ? <%= render "devise/shared/links" %></p>
     </div>
   </div>
 </div>
