Ajout Font pour signin & signout

--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row py-5">
       <div class="col-12">
-        <table id="example" class="table table-hover responsive nowrap" style="width:100%">
+        <table id="example" class="table table-responsive " style="width:100%">
           <thead>
             <tr>
               <th>Personne</th>
