Navbar : Couleur et padding

--- a/app/assets/stylesheets/components/_card-propriete.scss
+++ b/app/assets/stylesheets/components/_card-propriete.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 30px;
+  border-radius: 10px;
 }
 
 .card-propriete img {
@@ -33,4 +34,3 @@
 .card-propriete .card-propriete-infos {
   padding: 16px;
 }
-
