--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div class="container mt-4">
-    <ul class="list-inline tabs-underlined">
+<div class="container-navbar">
+    <ul class="list-inline tabs-underlined ">
   <% if user_signed_in? %>
     <li>
         <%= link_to "Propriétés", proprietes_path, class:  "text-dark tab-underlined #{'active' if current_page?(proprietes_path)}" %>
