--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row d-flex justify-content-center">
       <div class="col-sm-6 col-md-4 col-lg-4">
-        <h2 class="text-white">Change your password</h2>
+        <h2>Change your password</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
@@ -32,4 +32,4 @@
       </div>
     </div>
   </div>
-</div>
+
