BG navbar et body

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@
 //  body {
 //   background-color : #BA9FD9;
 //  }
-body {
+.container{
   height: 100vh;
+}
+body {
+  background-color: #FFEFD6;
+  font-family: 'Open Sans', sans-serif;
 }
