--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="container-navbar">
+<div class="container-navbar" id="navbar">
     <ul class="list-inline tabs-underlined ">
   <% if user_signed_in? %>
     <li>
