--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,12 @@
 .container-navbar ul {
-  background-color: #FFEFD6;
+  background-color: #f5f5f5;
   margin-bottom: 0;
   padding: 30px 40px;
 }
-
+#navbar {
+  background-color: #f5f5f5;
+  
+}
 .tabs-underlined {
   display: flex;
   align-items: center;
