--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row py-5">
     <%= form_with url: admin_reservations_path, method: :get, local: true, class: "d-flex my-2" do %>
-    <%= text_field_tag :query, params[:query], class: "form-control  me-2" %>
+    <%= text_field_tag :query, params[:query], class: "form-control me-2", onclick: "this.value=''" %>
     <%= submit_tag "Recherche", class: "btn btn-info" %>
     <% end %>
       <% if @reservations.any?%>
