--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -1,3 +1,4 @@
+ <%= render "shared/navbar" %>
 <div class="container">
   <div class="row py-5">
     <%= form_with url: admin_reservations_path, method: :get, local: true, class: "d-flex my-2" do %>
