--- a/app/views/proprietes/index.html.erb
+++ b/app/views/proprietes/index.html.erb
@@ -1,4 +1,5 @@
-<div class="container my-5">
+
+ <%= render "shared/navbar" %><div class="container my-5">
   <div class="row justify-content-center gy-4">
     <% @proprietes.each do |p| %>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
