--- a/app/views/proprietes/show.html.erb
+++ b/app/views/proprietes/show.html.erb
@@ -1,6 +1,5 @@
+ <%= render "shared/navbar" %>
 <div class="container mt-5" data-controller="toggle">
-
-
   <div class="row d-flex justify-content-center">
     <div class="col-sm-10 col-md-8 col-lg-8 mx-auto">
       <div class="card-trip">
