--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,3 +1,4 @@
+ <%= render "shared/navbar" %>
 <div class="container mt-3">
   <div class="row d-flex justify-content-center">
     <div class="col-sm-8 col-md-6 col-lg-6 mx-auto">
